--- a/styles/style.css
+++ b/styles/style.css
@@ -112,10 +112,13 @@ nav ul li a{
 
 /* last section start here */
 .last-section{
-    
+
 }
 .last-banner{
-
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ padding-left: 190px;
 }
 
 
